@@ -1,6 +1,8 @@
 Release 1.0.1 (in development)
 ==============================
 
+* Fix building with SingleHTMLBuilder when there is no toctree.
+
 * Fix display names for objects linked to by intersphinx with
   explicit targets.
 
